deployment/storybook-prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: parlamentsdienste-components-storybook
    namespace: parlamentsdienste-components
    labels:
        app: parlamentsdienste-components-storybook
        project: parlamentsdienste-components
        env: prod
spec:
    strategy:
        type: RollingUpdate
    replicas: 1
    selector:
        matchLabels:
            app: parlamentsdienste-components-storybook
            env: prod
            project: parlamentsdienste-components
    template:
        metadata:
            labels:
                app: parlamentsdienste-components-storybook
                env: prod
                project: parlamentsdienste-components
        spec:
            containers:
                - name: parlamentsdienste-components-storybook-prod
                  image: ghcr.io/lambda-it/parlamentsdienste-components/storybook:dev
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 80
                  resources:
                      requests:
                          memory: '16Mi'
                          cpu: '5m'
                      limits:
                          memory: '64Mi'
                          cpu: '100m'
            imagePullSecrets:
                - name: registry-secret
