deployment/storybook-prod/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: parlamentsdienste-components-storybook
    namespace: parlamentsdienste-components
    labels:
        app: parlamentsdienste-components-storybook
        project: parlamentsdienste-components
        env: prod
spec:
    selector:
        app: parlamentsdienste-components-storybook
        project: parlamentsdienste-components
        env: prod
    ports:
        - protocol: TCP
          port: 8080
          targetPort: 80
